--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
   display: flex;
-  flex-direction: column;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(116, 205, 173);
+}
+
+h1 {
+  color: rgb(152, 29, 39);
+}
+
+.container {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: space-around;
+  background-color: rgb(210, 157, 157);
+  border-radius: 50px;
+}
+
+.pokeSprite {
+  height: 100px;
+  width: auto;
+}
+
+h2 {
+  text-align: center
+}
+
+.picture {
+  height: 200px;
+  width: auto;
+}
+
+
+
+
+.modal {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: rgba(77, 77, 77, .7);
+  transition: all .4s;
 }
 
-.App-link {
-  color: #61dafb;
+.modal:target {
+  visibility: visible;
+  opacity: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.modal__content {
+  border-radius: 4px;
+  position: relative;
+  width: 500px;
+  max-width: 90%;
+  background: #fff;
+  padding: 1em 2em;
+}
+
+.modal__close {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  color: #585858;
+  text-decoration: none;
 }
